<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?android:windowBackground"
    android:fitsSystemWindows="true"
    tools:context=".ui.login.LoginFragment">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/iv_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/register_card"
                    android:layout_marginTop="120dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/elipse_wide"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/elipse"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <!--        <ImageView-->
                <!--            android:id="@+id/btn_back"-->
                <!--            android:layout_width="24dp"-->
                <!--            android:layout_height="24dp"-->
                <!--            android:src="@drawable/ic_fi_arrow_left"-->
                <!--            android:background="@color/white"-->
                <!--            android:layout_marginTop="28dp"-->
                <!--            android:layout_marginStart="16dp"-->
                <!--            app:layout_constraintTop_toTopOf="parent"-->
                <!--            app:layout_constraintStart_toStartOf="parent" />-->

                <ImageView
                    android:id="@+id/iv_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_logo"
                    android:layout_marginTop="35dp"
                    android:layout_marginStart="56dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tv_second_hand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="second hand"
                    android:textSize="32sp"
                    android:textFontWeight="600"
                    android:textColor="#193C8D"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="@id/iv_logo"
                    app:layout_constraintBottom_toBottomOf="@id/iv_logo"
                    app:layout_constraintStart_toEndOf="@+id/iv_logo" />

                <TextView
                    android:id="@+id/tv_welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="Selamat Datang Kembali"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@id/iv_card"
                    app:layout_constraintStart_toStartOf="@id/iv_card"
                    app:layout_constraintTop_toTopOf="@id/iv_card" />


                <ImageView
                    android:id="@+id/iv_signin"
                    android:layout_width="235dp"
                    android:layout_height="185dp"
                    android:src="@drawable/signin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_welcome"/>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_container"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="64dp"
                    android:layout_marginHorizontal="30dp"
                    app:hintEnabled="false"
                    app:endIconMode="custom"
                    app:endIconTint="@color/black"
                    app:endIconDrawable="@drawable/ic_et_email"
                    app:hintAnimationEnabled="false"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    android:layout_marginTop="16dp"
                    app:boxBackgroundColor="#FAFAFA"
                    app:layout_constraintTop_toBottomOf="@id/iv_signin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_email"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/montserrat_regular"
                            android:hint="Masukkan alamat email anda"
                            android:inputType="textEmailAddress"
                            android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_container"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="64dp"
                    android:layout_marginHorizontal="30dp"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    app:boxBackgroundColor="#FAFAFA"
                    android:layout_marginTop="16dp"
                    app:passwordToggleTint="@color/black"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleDrawable="@drawable/password_toggle_drawable"
                    app:layout_constraintTop_toBottomOf="@id/email_container"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_masukkan_passowrd"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/montserrat_regular"
                            android:hint="Masukkan password anda"
                            android:inputType="textPassword"
                            android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
                    android:id="@+id/cb_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/password_container"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/btn_masuk"
                    android:layout_marginEnd="29dp"
                    android:buttonTint="@color/primary_blue"
                    android:layout_marginVertical="12dp" />

                <TextView
                    android:id="@+id/tv_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="Ingat Saya"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@id/cb_password"
                    app:layout_constraintEnd_toStartOf="@id/cb_password"
                    app:layout_constraintTop_toTopOf="@id/cb_password" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_masuk"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/button_background"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="Sign In"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cb_password" />

                <TextView
                    android:id="@+id/tv_daftar_disini"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="84dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="4dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="Belum memiliki akun ?"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toStartOf="@id/tv_signup"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_masuk" />

                <TextView
                    android:id="@+id/tv_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="84dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="Sign Up"
                    android:textColor="#193C8D"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/tv_daftar_disini"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_daftar_disini"
                    app:layout_constraintTop_toTopOf="@id/tv_daftar_disini" />

                <ProgressBar
                    android:id="@+id/pb_loading"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>