...
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_nama" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="34dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
...
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="18dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/container_keluar"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="18dp"
                android:gravity="fill_horizontal">

                <ImageView
...
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_login" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8sp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="Sign In"
        android:textAllCaps="false"
...
