...
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/iv_line_vertical"
        app:layout_constraintStart_toStartOf="@id/iv_line_horizontal"
        app:layout_constraintTop_toBottomOf="@id/iv_line_horizontal" />

    <TextView
        android:id="@+id/tv_ya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="Ya"
        android:textAlignment="center"
        android:textColor="#B71E19"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/iv_line_horizontal"
        app:layout_constraintStart_toStartOf="@id/iv_line_vertical"
        app:layout_constraintTop_toBottomOf="@id/iv_line_horizontal" />
...
